# dimm

./: .gitignore  Anchor.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_OVERVIEW.md  README.md  SECURITY.md  SETUP_GUIDE.md  package.json
.github/workflows/: ci.yml
docs/: architecture.md  cnft.md  program.md  quickstart.md  sdk.md  security.md
examples/: ai-trading-bot.ts  basic-usage.ts  multi-agent-orchestration.ts  package.json  tsconfig.json
programs/dimm/: Cargo.toml  Xbuild.rs
programs/dimm/src/: constants.rs  errors.rs  lib.rs
programs/dimm/src/instructions/: create_agent.rs  execute_transaction.rs  fund_agent.rs  initialize.rs  mod.rs  record_activity.rs  request_sol.rs  revoke_agent.rs  update_limits.rs  update_permissions.rs  withdraw_from_agent.rs
programs/dimm/src/state/: agent_account.rs  agent_activity.rs  agent_stats.rs  delegation.rs  emergency.rs  mod.rs  protocol_config.rs  rate_limit.rs  treasury.rs  whitelist.rs
sdk/: .eslintrc.js  README.md  jest.config.js  package.json  tsconfig.json
sdk/src/: agent.ts  client.ts  constants.ts  index.ts  types.ts  utils.ts
tests/: dimm.ts
