[package]
name = "dimm"
version = "0.1.0"
description = "DIMM - Dynamic Intelligence Multi-Modal Solana Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dimm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
mpl-bubblegum = "1.3.0"
spl-account-compression = "0.3.0"
solana-program = "~1.17.0"

[dev-dependencies]
solana-program-test = "~1.17.0"
solana-sdk = "~1.17.0"

